# temp-task-06

./: CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  README.md  docker-compose.yaml  event_catalog.md  event_driven_design.md  openapi.yaml  perfomance_analysis.md  perfomance_design.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  docker.yaml
cmake/: DownloadUserver.cmake
configs/: config_vars.testing.yaml  config_vars.yaml  secdist.json  static_config.yaml
event_consumer/: Dockerfile  consumer.py
mongodb/: data.js  docker_commands.md  queries.js  schema_design.md  validation.js
postgresql/: optimization.md  optimization_bigger_data.md  queries.sql
postgresql/data/: initial_data.sql
postgresql/schemas/: bigger_data.sql  data.sql  db_1.sql  schema.sql
scripts/: after_opt_script.txt  before_opt_script.txt  benchmark_before2.txt  benchmark_script.txt  post_login.lua
scripts/results/: benchmark_after.txt  benchmark_after2.txt  benchmark_after3.txt  benchmark_after4.txt  benchmark_before.txt  logs.txt
src/: README.md  greeting.cpp  greeting.hpp  greeting_benchmark.cpp  greeting_test.cpp  hello.cpp  hello.hpp  hello_grpc.cpp  hello_grpc.hpp  hello_mongo.cpp  hello_mongo.hpp  hello_postgres.cpp  hello_postgres.hpp  main.cpp
src/auth/: jwt.cpp  jwt.hpp  jwt_auth_checker.cpp  jwt_auth_checker.hpp  jwt_auth_factory.cpp  jwt_auth_factory.hpp
src/cache/: cache_manager.cpp  cache_manager.hpp
src/event/: event_consumer.cpp  event_consumer.hpp  event_producer.cpp  event_producer.hpp  event_types.hpp
src/handlers/: auth_handlers.cpp  auth_handlers.hpp  auth_middleware.cpp  auth_middleware.hpp  comment_handlers.cpp  comment_handlers.hpp  project_handlers.cpp  project_handlers.hpp  task_handlers.cpp  task_handlers.hpp  user_handlers.cpp  user_handlers.hpp
src/models/: comment.hpp  project.hpp  task.hpp  user.hpp
src/rate_limit/: sliding_window.cpp  sliding_window.hpp
src/storage/: in_memory_storage.cpp  in_memory_storage.hpp  mongodb_storage.cpp  mongodb_storage.hpp  postgres_storage.cpp  postgres_storage.hpp
tests/: conftest.py  test_basic.py  test_grpc.py  test_mongo.py  test_postgres.py
